[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-markdownfield"
dynamic = ["version"]
description = "A simple custom field for Django that can safely render Markdown and store it in the database."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Luke Rogers", email = "luke@dmptr.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=3.2",
    "bleach[css]>=5.0.1",
    "markdown",
    "shortuuid",
]

[tool.hatch.version]
path = "markdownfield/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["markdownfield"]

[project.urls]
Homepage = "https://github.com/dmptrluke/django-markdownfield"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "node_modules",
    "build",
]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "DJ",        # flake8-django
    "A",         # flake8-builtins
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "RUF",       # ruff-specific
    "PIE",       # flake8-pie
]
ignore = [
    "RUF012",  # mutable class attrs (false positive for Django)
    "SIM108",  # ternary operator
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
